# z-sigilatlas

./: .dockerignore  .gitignore  BACKLOG.md  BUGS.md  CNAME  Dockerfile  JOURNAL.md  README.md  STATUS.md  UI_TEST_PLAN.md  agents.md  fly.toml  pyproject.toml
.github/workflows/: every-4-hours.yml  rotate-banner.yml
docs/: attention-language.md
scripts/: demo_image_ids.json  generate_banner.py  select_demo_subset.py
sigiltree/: arcade.py  atlas.py  cli.py  contrasts.py  db.py  embeddings.py  flythrough.py  indexer.py  ride_engine.py  ride_session.py  ride_stats.py  sigil_scoring.py  taste_axis.py  viewer_server.py  walk.py
spec/: CHANGELOG.md  INDEX.md  OPEN-QUESTIONS.md  atlas.md  calibration.md  pipeline.md  rendering.md  vocabulary.md
spec/atlas/: navigation.md  treemap-layout.md
spec/calibration/: category-filter.md  sigil-persistence.md  taste-walk.md
spec/pipeline/: contrast-discovery.md  embeddings.md  indexer.md
spec/rendering/: overlay.md  scoring-pipeline.md  taste-radar.md
tests/: test_arcade.py  test_atlas.py  test_categories.py  test_contrasts.py  test_doors.py  test_embeddings.py  test_flythrough.py  test_indexer.py  test_ride.py  test_sigil_scoring.py  test_taste_axis.py  test_walk.py
